WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239675
Web Inspector: crash when using a skip network local override that has an error status code
https://bugs.webkit.org/show_bug.cgi?id=239675
Summary
Web Inspector: crash when using a skip network local override that has an err...
Devin Rousso
Reported
2022-04-22 16:37:57 PDT
.
Attachments
Patch
(1.97 KB, patch)
2022-04-22 16:43 PDT
,
Devin Rousso
pangle
: review+
Details
Formatted Diff
Diff
Patch
(6.67 KB, patch)
2022-04-25 11:07 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2022-04-22 16:43:26 PDT
Created
attachment 458186
[details]
Patch
Patrick Angle
Comment 2
2022-04-22 16:50:10 PDT
Comment on
attachment 458186
[details]
Patch r=me – Is this testable?
Devin Rousso
Comment 3
2022-04-25 11:07:41 PDT
Created
attachment 458283
[details]
Patch (In reply to Patrick Angle from
comment #2
)
> r=me – Is this testable?
yup, I just forgot to `git add` before I `webkit-patch upload` 😅
Patrick Angle
Comment 4
2022-04-25 11:31:31 PDT
Comment on
attachment 458283
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=458283&action=review
> LayoutTests/http/tests/inspector/network/intercept-request-subresource-with-response-error-status-code.html:19 > + responseStatusCode: 418,
🤣
EWS
Comment 5
2022-04-25 15:57:18 PDT
Committed
r293367
(
249967@main
): <
https://commits.webkit.org/249967@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458283
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-04-25 15:58:15 PDT
<
rdar://problem/92299551
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug