Web Inspector: crash when a subresource is intercepted by a skip network local override with an error status code https://bugs.webkit.org/show_bug.cgi?id=239675

Reviewed by Patrick Angle.

Source/WebCore:

Test: http/tests/inspector/network/intercept-request-subresource-with-response-error-status-code.html

* inspector/agents/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::interceptRequestWithResponse):
`SubresourceLoader::didReceiveResponse` will eventually cause `releaseResources` (via `cancel`),
which will clear the `m_resource`, which is needed in order to provide the response content.
We should only provide the response content if we're still processing the load.

LayoutTests:

* http/tests/inspector/network/intercept-request-subresource-with-response-error-status-code.html: Added.
* http/tests/inspector/network/intercept-request-subresource-with-response-error-status-code-expected.txt: Added.

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/249967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293367 268f45cc-cd09-0410-ab3c-d52691b4dbfc